# pkg/api/v1/favorite.pb.gw.go
@@ -203,7 +203,7 @@ func RegisterFavoriteServiceHandlerServer(ctx context.Context, mux *runtime.Serv
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
 		var err error
 		var annotatedContext context.Context
-		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/v1.FavoriteService/AddItemToFavorites", runtime.WithHTTPPathPattern("/v1/favorite"))
+		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/v1.FavoriteService/AddItemToFavorites", runtime.WithHTTPPathPattern("/api/v1/favorite"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
@@ -228,7 +228,7 @@ func RegisterFavoriteServiceHandlerServer(ctx context.Context, mux *runtime.Serv
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
 		var err error
 		var annotatedContext context.Context
-		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/v1.FavoriteService/RemoveItemFromFavorites", runtime.WithHTTPPathPattern("/v1/favorite/{list_name}/{product_id}"))
+		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/v1.FavoriteService/RemoveItemFromFavorites", runtime.WithHTTPPathPattern("/api/v1/favorite/{list_name}/{product_id}"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
@@ -253,7 +253,7 @@ func RegisterFavoriteServiceHandlerServer(ctx context.Context, mux *runtime.Serv
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
 		var err error
 		var annotatedContext context.Context
-		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/v1.FavoriteService/GetFavorites", runtime.WithHTTPPathPattern("/v1/favorite/{list_name}"))
+		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/v1.FavoriteService/GetFavorites", runtime.WithHTTPPathPattern("/api/v1/favorite/{list_name}"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
@@ -317,7 +317,7 @@ func RegisterFavoriteServiceHandlerClient(ctx context.Context, mux *runtime.Serv
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
 		var err error
 		var annotatedContext context.Context
-		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/v1.FavoriteService/AddItemToFavorites", runtime.WithHTTPPathPattern("/v1/favorite"))
+		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/v1.FavoriteService/AddItemToFavorites", runtime.WithHTTPPathPattern("/api/v1/favorite"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
@@ -339,7 +339,7 @@ func RegisterFavoriteServiceHandlerClient(ctx context.Context, mux *runtime.Serv
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
 		var err error
 		var annotatedContext context.Context
-		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/v1.FavoriteService/RemoveItemFromFavorites", runtime.WithHTTPPathPattern("/v1/favorite/{list_name}/{product_id}"))
+		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/v1.FavoriteService/RemoveItemFromFavorites", runtime.WithHTTPPathPattern("/api/v1/favorite/{list_name}/{product_id}"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
@@ -361,7 +361,7 @@ func RegisterFavoriteServiceHandlerClient(ctx context.Context, mux *runtime.Serv
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
 		var err error
 		var annotatedContext context.Context
-		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/v1.FavoriteService/GetFavorites", runtime.WithHTTPPathPattern("/v1/favorite/{list_name}"))
+		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/v1.FavoriteService/GetFavorites", runtime.WithHTTPPathPattern("/api/v1/favorite/{list_name}"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
@@ -381,11 +381,11 @@ func RegisterFavoriteServiceHandlerClient(ctx context.Context, mux *runtime.Serv
 }
 
 var (
-	pattern_FavoriteService_AddItemToFavorites_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "favorite"}, ""))
+	pattern_FavoriteService_AddItemToFavorites_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"api", "v1", "favorite"}, ""))
 
-	pattern_FavoriteService_RemoveItemFromFavorites_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2, 1, 0, 4, 1, 5, 3}, []string{"v1", "favorite", "list_name", "product_id"}, ""))
+	pattern_FavoriteService_RemoveItemFromFavorites_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3, 1, 0, 4, 1, 5, 4}, []string{"api", "v1", "favorite", "list_name", "product_id"}, ""))
 
-	pattern_FavoriteService_GetFavorites_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"v1", "favorite", "list_name"}, ""))
+	pattern_FavoriteService_GetFavorites_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3}, []string{"api", "v1", "favorite", "list_name"}, ""))
 )
 
 var (
